src/backends/meta-monitor-config.c
@@ -840,6 +840,9 @@ meta_monitor_config_get_stored (MetaMonitorConfig *self,
   MetaConfiguration key;
   MetaConfiguration *stored;
 
+  if (n_outputs == 0)
+    return NULL;
+
   make_config_key (&key, outputs, n_outputs, -1);
   stored = g_hash_table_lookup (self->configs, &key);
 
@@ -1246,6 +1249,12 @@ meta_monitor_config_make_default (MetaMonitorConfig  *self,
 
   outputs = meta_monitor_manager_get_outputs (manager, &n_outputs);
   meta_monitor_manager_get_screen_limits (manager, &max_width, &max_height);
+
+  if (n_outputs == 0)
+    {
+      meta_verbose ("No output connected, not applying configuration\n");
+      return;
+    }
 
   default_config = make_default_config (self, outputs, n_outputs, max_width, max_height);
 
